popup toggle word wrap button and intellisense bug fix

--- a/main.css
+++ b/main.css
@@ -57,7 +57,7 @@
 }
 
 
-.CodeNinjasHelper > div.selected{
+.CodeNinjasHelper div.selected{
     background-color: var(--selection-bg-color);
     cursor: pointer;
 }
